refactor get weekly best products
